@@ -10,6 +10,8 @@
 	ADDED - Weathermap has a hook in the map viewing page to allow other plugins to add code there
 	ADDED - .htaccess files bundled with Weathermap to restrict direct access to configs and output
 	ADDED - filenames for output are much less guessable now
+	CHANGE - DS plugins are able to return negative results now ***breaks user-developed DS plugins***
+	CHANGE - the scale: prefix for the RRD DS plugin can take negative scale factors
 	FIXED - KEYOUTLINECOLOR is actually used now (thanks to llow once more)
 	FIXED - Editor doesn't throw away WIDTH and HEIGHT with no BG image
 	FIXED - Cacti Data-source and Graph picker doesn't restrict scrolling or resizing anymore
